--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.feng</groupId>
-    <artifactId>demo.jfinal</artifactId>
+    <artifactId>JFinal</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>demo.jfinal Maven Webapp</name>
+    <name>JFinal Demo Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
@@ -35,26 +35,30 @@
     </dependencies>
 
     <build>
-        <finalName>demo.jfinal</finalName>
+        <finalName>JFinal</finalName>
     </build>
 
     <repositories>
         <repository>
             <id>nexus_oschina</id>
-            <name>local private nexus</name>
+            <name>oschina Repository</name>
             <url>http://maven.oschina.net/content/groups/public/</url>
             <releases>
+                <updatePolicy>never</updatePolicy><!-- never,always,interval n -->
                 <enabled>true</enabled>
+                <checksumPolicy>warn</checksumPolicy><!-- fail,ignore -->
             </releases>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
+            <layout>default</layout>
         </repository>
     </repositories>
+
     <pluginRepositories>
         <pluginRepository>
             <id>nexus_oschina</id>
-            <name>local private nexus</name>
+            <name>oschina Repository</name>
             <url>http://maven.oschina.net/content/groups/public/</url>
             <releases>
                 <enabled>true</enabled>
@@ -62,6 +66,7 @@
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
+            <layout>default</layout>
         </pluginRepository>
     </pluginRepositories>
 </project>
